--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,18 +1,18 @@
 <header class="site-header">
   <div class="container">
     <div class="l-1up">
-      <div class="site-logo">
+      <div class="site-header-logo">
         <h1 class="element-invisible">Small Tabs Chicago</h1>
         <img src="{{ site.baseurl }}/assets/img/smalltabs-logo__header.svg" />
       </div>
-      <nav class="site-navigation">
-        <a class="site-navigation__link" href="#">Bar Specials</a>
-        <a class="site-navigation__link" href="#">Neighborhoods</a>
-        <a class="site-navigation__link" href="#">Promote Your Bar</a>
-        <a class="site-navigation__button" href="#">Sign In</a>
+      <nav class="site-header-navigation">
+        <a class="site-header-navigation__link" href="#">Bar Specials</a>
+        <a class="site-header-navigation__link" href="#">Neighborhoods</a>
+        <a class="site-header-navigation__link" href="#">Promote Your Bar</a>
+        <a class="site-header-navigation__button" href="#">Sign In</a>
       </nav>
-      <nav class="site-navigation--mobile">
-        <a class="site-navigation__link-icon"><i class="ss-icon ss-standard">rows</i></a>
+      <nav class="site-header-navigation--mobile">
+        <a class="site-header-navigation__link-icon"><i class="ss-icon ss-standard">rows</i></a>
       </nav>  
     </div>
   </div>
