--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,14 @@
   </head>
     <body>
 
-      <header class="container styleguide-header">
-        <div class="l-1up">
-          <h1 class="element-invisible">{{ site.name }}</h1>
-          <a href="{{ site.baseurl }}/index.html">
-            <img class="styleguide-header__image" src="{{ site.baseurl }}/assets/img/smalltabs-logo__styleguide.svg" />
-          </a>
+      <header class="styleguide-header">
+        <div class="container">
+          <div class="l-1up">
+            <h1 class="element-invisible">{{ site.name }}</h1>
+            <a href="{{ site.baseurl }}/index.html">
+              <img class="styleguide-header__image" src="{{ site.baseurl }}/assets/img/smalltabs-logo__header.svg" />
+            </a>
+          </div>
         </div>
       </header>
 
